welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:1: error: Missing closing brace `}' assumed here
do {
^Poucet:6: error: '}' expected but 'case' found.
     case nbBiscuits >= 3 => gauche();
     ^Poucet:7: error: 'while' expected but 'case' found.
     case nbBiscuits <= 2 => droite(); }
     ^Poucet:7: error: '(' expected but ';' found.
     case nbBiscuits <= 2 => droite(); }
                                     ^Poucet:8: error: expected class or object definition
    while (sortieTrouvee)
    ^Poucet:9: error: expected class or object definition
avance(); 
^Poucet:11: error: eof expected but '}' found.
	}
        ^